# noteboard

./: CMakeLists.txt  README.md  SPECIFICATION.md
.devcontainer/: devcontainer.json
.devcontainer/qt6/: devcontainer-feature.json  install.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app/i18n/: qml_en.ts  qml_en_AU.ts  qml_fr.ts
src/app/qml/: AboutPage.ui.qml  AboutPageContainer.qml  AppSettings.qml  ColorsPage.ui.qml  Constants.qml  EditPage.ui.qml  EditPageContainer.qml  HomePage.ui.qml  HomePageContainer.qml  Main.qml  NoteCard.ui.qml  ServicesPage.qml  ServicesPage.ui.qml  ServicesPageContainer.qml  ServicesView.ui.qml  SettingsPage.qml  SettingsPage.ui.qml  SettingsPageContainer.qml  SettingsView.ui.qml  SideBar.ui.qml  qmldir
src/app/qml/services/: SamsungFrame.qml
src/common/: CMakeLists.txt  board.cpp  board.h  item.cpp  item.h  multicast.cpp  multicast.h  preview.cpp  preview.h  ssdp.cpp  ssdp.h  todo.cpp  todo.h  wakeonlan.cpp  wakeonlan.h
src/server/: CMakeLists.txt  main.cpp
src/services/: CMakeLists.txt  ServiceBase.qml  ServicesList.qml
src/services/Preview/: Preview.qml  Service.qml
src/services/SamsungFrame/: SamsungFrame.qml  Service.qml
src/web/: CMakeLists.txt  main.cpp
